--- a/Loja/style.css
+++ b/Loja/style.css
@@ -33,6 +33,8 @@ h1, h2{
     display: flex;
     align-items:center;
     justify-content: space-between;
+    align-items: center;
+    z-index: 999;
 }
 
 .p{
@@ -58,4 +60,12 @@ h1, h2{
     opacity: 1;
     cursor: pointer;
     transform: rotate(150deg);
+}
+
+.center{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
