--- a/Carrinho/style.css
+++ b/Carrinho/style.css
@@ -37,3 +37,65 @@
     cursor: pointer;
     box-shadow: rgba (0, 0, 0, 0.454) 0px 5px 5px;
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgb(96, 40, 5);
+    color: white;
+}
+
+h1{
+    font-weight: bolder;
+    letter-spacing: 7px;
+    font-size: 54px;
+}
+
+a{
+    width: 100%;
+    text-align: left;
+    padding-left: 20px;
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.7;
+}
+
+a:hover{
+    opacity: 1;
+}
+
+#lista{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    background-color: black;
+    padding: 20px;
+    border-radius: 20px;
+    border: 2px solid white;
+}
+
+#lista li{
+     display: flex;
+     align-items: left;
+     justify-content: space-between;
+     border-bottom: 2px solid white;
+     padding: 12px;
+}
+
+#lista li:hover{
+    background-color: transparent;
+    border: none;
+    opacity: 0.7;
+}
+
+#lista button:hover{
+    cursor: pointer;
+    opacity: 1;
+    transform: scale(1.5);
+}
