--- a/Carrinho/style.css
+++ b/Carrinho/style.css
@@ -12,10 +12,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: blueviolet;
+    background-color: rgb(117, 25, 16);
     color: aliceblue;
     font-size: 1.4rem;
     width: auto;
+    border-radius: 20px;
 }
 
 .btn-word{
@@ -46,7 +47,7 @@ body{
     gap: 4vh;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: rgb(96, 40, 5);
+    background-color: rgb(142, 44, 11);
     color: white;
 }
 
